--- a/web/compose.html
+++ b/web/compose.html
@@ -2566,7 +2566,7 @@
     var Shared; (function (n) { function t (n) { for (var i = [], t = 1; t < arguments.length; t++)i[t - 1] = arguments[t]; return n.replace(/\{([0-9]+)\}/g, function (n, t) { var r = parseInt(t); return r >= 0 && r < i.length ? i[r] : "" }) } n.formatString = t })(Shared || (Shared = {}));
   //]]></script>
   <script type="text/javascript" crossorigin="anonymous"
-    src="/rp/ewpjexaHUg43JVD_aYNfJbu1EJQ.br.js"></script>
+    src="https://cdn.jsdelivr.net/gh/JasonYFY/CDN/js/ewpjexaHUg43JVD_aYNfJbu1EJQ.br.js"></script>
   <script type="text/javascript">//<![CDATA[
     _w["_udsCoAuthorConfig"] = { "EnableSecureConversation": true, "AddOptionsSets": ["soedgeca"], "RemoveOptionsSets": [], "DevMode": false, "UseHarmonyImaginitive": false, "ComposeUnderVPTest": false, "ComposeInline": false, "Source": "edge_coauthor_prod", "ComposeSidebarCustomization": false, "DetachedUX": false, "GetConversationId": false, "CodexV2": false };;
   //]]></script>
