--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
   <script src="/js/bing/chat/global.js"></script>
   <script src="/js/bing/chat/amd.js"></script>
   <script src="/js/bing/chat/config.js"></script>
+    <style type="text/css">@import "/css/bing.css";</style>
 </head>
 
 <body>
