--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,13 @@
 
 <body>
   <div id="b_sydHeadBg"></div>
+  <div id="sydWelcomeTemplate">
+      <div id="b_sydWelcomeTemplate" class="b_wlcmCont" data-priority="2" style="margin-top: 66px;">
+          <div class="b_wlcmHdr"><div class="b_wlcmLogo"></div>
+              <div class="b_wlcmDesc">必应是由 AI 支持的 Web Copilot</div>
+          </div>
+          <div class="b_wlcmTileCont b_wlcmTileContConsumer"></div>
+      </div>
   <div id="b_sydConvCont" _iid="SERP.5029">
     <div id="b_sydtoporpole" class="b_sydConvAnsTest"></div>
     <div id="b_sydBgCover"></div>
